--- a/GUI/XIB files/Monitor.xib
+++ b/GUI/XIB files/Monitor.xib
@@ -23,6 +23,7 @@
                 <outlet property="laProbe1" destination="a6a-Do-vAv" id="KvN-lJ-akA"/>
                 <outlet property="laProbe2" destination="8JZ-Ek-Huy" id="H5s-xM-28n"/>
                 <outlet property="laProbe3" destination="aI2-IB-WIS" id="tKa-PG-mtS"/>
+                <outlet property="trace0" destination="lv6-6G-Igc" id="U1d-w0-Pgu"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="Psk-RA-Owv"/>
             </connections>
         </customObject>
@@ -31,14 +32,14 @@
         <window title="Monitor" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="602" height="418"/>
+            <rect key="contentRect" x="196" y="240" width="712" height="605"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1496" height="933"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="602" height="418"/>
+                <rect key="frame" x="0.0" y="0.0" width="712" height="605"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <box fixedFrame="YES" title="Logic Analyzer" translatesAutoresizingMaskIntoConstraints="NO" id="ka1-cX-7gc">
-                        <rect key="frame" x="17" y="139" width="414" height="259"/>
+                        <rect key="frame" x="17" y="326" width="414" height="259"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <view key="contentView" id="IOt-oi-MVe">
                             <rect key="frame" x="4" y="5" width="406" height="239"/>
@@ -260,12 +261,38 @@
                             </subviews>
                         </view>
                     </box>
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lv6-6G-Igc" customClass="LogicView" customModule="Tiara" customModuleProvider="target">
+                        <rect key="frame" x="20" y="180" width="672" height="128"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    </customView>
+                    <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wqt-xo-Ktb">
+                        <rect key="frame" x="19" y="20" width="673" height="91"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <clipView key="contentView" id="YwA-Jh-ENX">
+                            <rect key="frame" x="1" y="1" width="671" height="74"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VmG-VX-Xid" customClass="LogicView" customModule="Tiara" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="16399" height="92"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </customView>
+                            </subviews>
+                        </clipView>
+                        <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="nEq-wH-reV">
+                            <rect key="frame" x="1" y="75" width="671" height="15"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="obq-7f-tfa">
+                            <rect key="frame" x="-100" y="-100" width="15" height="74"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
                 </subviews>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="C5l-tr-0f9"/>
             </connections>
-            <point key="canvasLocation" x="193" y="221"/>
+            <point key="canvasLocation" x="248" y="314.5"/>
         </window>
         <button verticalHuggingPriority="750" id="T1a-rf-wnL">
             <rect key="frame" x="0.0" y="0.0" width="140" height="18"/>
