--- a/GUI/XIB files/LogicAnalyzer.xib
+++ b/GUI/XIB files/LogicAnalyzer.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="Monitor" customModule="Tiara" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="LogicAnalyzer" customModule="Tiara" customModuleProvider="target">
             <connections>
                 <outlet property="laColor0" destination="P1V-P5-GfH" id="ktN-fj-ROW"/>
                 <outlet property="laColor1" destination="gWw-fl-wE5" id="Rol-OS-lX2"/>
@@ -22,12 +22,16 @@
                 <outlet property="laProbe1" destination="a6a-Do-vAv" id="KvN-lJ-akA"/>
                 <outlet property="laProbe2" destination="8JZ-Ek-Huy" id="H5s-xM-28n"/>
                 <outlet property="laProbe3" destination="aI2-IB-WIS" id="tKa-PG-mtS"/>
+                <outlet property="trace0" destination="eYh-oE-JEi" id="ulM-KX-NDU"/>
+                <outlet property="trace1" destination="C6E-Vo-2du" id="5uH-vO-bzx"/>
+                <outlet property="trace2" destination="pca-05-1fn" id="5wy-S2-Hcc"/>
+                <outlet property="trace3" destination="ELe-vu-naR" id="mST-FP-AVx"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="Psk-RA-Owv"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Monitor" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="Logic Analyzer" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="868" height="406"/>
@@ -51,8 +55,11 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eYh-oE-JEi" customClass="LogicView" customModule="Tiara" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="16399" height="56"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="10000" height="56"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <outlet property="analyzer" destination="-2" id="dHe-qd-eaY"/>
+                                                </connections>
                                             </customView>
                                         </subviews>
                                         <color key="backgroundColor" name="underPageBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -128,8 +135,11 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C6E-Vo-2du" customClass="LogicView" customModule="Tiara" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="16399" height="55"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="10000" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <outlet property="analyzer" destination="-2" id="dIx-lW-9rN"/>
+                                                </connections>
                                             </customView>
                                         </subviews>
                                         <color key="backgroundColor" name="underPageBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -185,8 +195,11 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pca-05-1fn" customClass="LogicView" customModule="Tiara" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="16399" height="55"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="10000" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <outlet property="analyzer" destination="-2" id="L3P-rg-4Tt"/>
+                                                </connections>
                                             </customView>
                                         </subviews>
                                         <color key="backgroundColor" name="underPageBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -416,8 +429,11 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ELe-vu-naR" customClass="LogicView" customModule="Tiara" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="16399" height="55"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="10000" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <outlet property="analyzer" destination="-2" id="r4N-BX-bu0"/>
+                                                </connections>
                                             </customView>
                                         </subviews>
                                         <color key="backgroundColor" name="underPageBackgroundColor" catalog="System" colorSpace="catalog"/>
